[package]
name = "drcode-rust"
version = "1.1.0"
authors = ["Ashutosh Renu <ashutosh@airia.in>"]
edition = "2021"
description = "A drcode-rust is a Rust package that facilitates error tracking and performance monitoring for your applications. Utilizing the sentry package internally, drcode-rust collects and processes application logs to provide detailed insights into errors and performance issues. With this package, you can easily integrate error tracking into your Rust applications, helping you to maintain optimal performance and quickly address issues."
license = "MIT"

[dependencies]
sentry = { version = "0.31.0", features = ["tokio"] }
tokio = { version = "1.28.0", features = ["full"] }